--- a/Latex Nichtlineare Zustandsbeobachtung/anhang_bewegungsgleichungen.tex
+++ b/Latex Nichtlineare Zustandsbeobachtung/anhang_bewegungsgleichungen.tex
@@ -1,7 +1,7 @@
 \section{Nichtlineare Bewegungsgleichungen des Doppelpendels}
 \label{sec:nichtlinearediffgleichungen}
 
-In diesem Abschnitt werden die nichtlinearen Bewegungsgleichungen vollständig dargestellt. Nach der Entkopplung von~\eqref{eq:ddphi1Entkoppelt} und~\eqref{eq:ddphi2Entkoppelt} ergibt sich:
+In diesem Abschnitt werden die nichtlinearen Bewegungsgleichungen vollständig aufgeführt. Nach der Entkopplung von~\eqref{eq:ddphi1Entkoppelt} und~\eqref{eq:ddphi2Entkoppelt} ergibt sich:
 
 \begin{align}
 	\ddot{\varphi}_1 
