--- a/Latex Nichtlineare Zustandsbeobachtung/bildbasiertevalidierung.tex
+++ b/Latex Nichtlineare Zustandsbeobachtung/bildbasiertevalidierung.tex
@@ -136,7 +136,7 @@ Der bildbasierte innere Pendelwinkel $ \varphi_{1,\mathrm{B}} $ wird anhand der 
 	\label{fig:validierungphi1}
 \end{figure}
 
-Es ist zu sehen, dass beide Winkelverläufe eine hohe Übereinstimmung aufweisen. Der Korrelationskoeffizient der beiden Winkelmessungen beträgt $ \varrho =  0.9956 $. Der Fehler zwischen den beiden Winkelmessungen ist bei einem Versatz von $ \pm\ang{45} $ aus der vertikalen Ruhelage mit $ \varphi_1= \ang{180} $ aus am größten und beträgt maximal etwa \ang{3}. Diese Stellen entsprechen den Eckpunkten des Kamerakoordinatensystems $ KS_\mathrm{B} $. Eine mögliche Fehlerursache könnten radiale und tangentiale Linsenverzeichnungen der Kamera sein. Nach~\cite{Ortmaier2016} resultieren radiale Verzeichnungen aus der konvexen Oberfläche der Linse und tangentiale Verzeichnungen aus fertigungsbedingten Ungenauigkeiten der Kamera. Eine Möglichkeit diese potentiellen Fehler zu vermeiden, besteht darin die Kamera zu kalibrieren und die 5 Verzeichnungsparameter zu bestimmen. Im Anschluss werden die Bilddaten mithilfe der Verzeichnungsparameter transformiert und so ein kalibriertes Bild erzeugt. Im Rahmen dieser Arbeit wird jedoch auf eine Kamerakalibrierung verzichtet, da die bildbasierte Winkelbestimmung zufriedenstellende Ergebnisse liefert. Eine weitere Ursache für Abweichungen zwischen $ \varphi_1 $ und $ \varphi_{1,\mathrm{B}} $ liegt in der eventuell nicht exakt horizontal  ausgerichteten Kamera vor dem Doppelpendel, wodurch ein perspektivischer Fehler entstehen kann. 
+Es ist zu sehen, dass beide Winkelverläufe eine hohe Übereinstimmung aufweisen. Der Korrelationskoeffizient der beiden Winkelmessungen beträgt $ \varrho =  0.9956 $. Der Fehler zwischen den beiden Winkelmessungen ist bei einem Versatz von $ \pm\ang{45} $ aus der vertikalen Ruhelage mit $ \varphi_1= \ang{180} $ aus am größten und beträgt maximal etwa \ang{3}. Diese Stellen entsprechen den Eckpunkten des Kamerakoordinatensystems $ \mathrm{KS}_\mathrm{B} $. Eine mögliche Fehlerursache könnten radiale und tangentiale Linsenverzeichnungen der Kamera sein. Nach~\cite{Ortmaier2016} resultieren radiale Verzeichnungen aus der konvexen Oberfläche der Linse und tangentiale Verzeichnungen aus fertigungsbedingten Ungenauigkeiten der Kamera. Eine Möglichkeit diese potentiellen Fehler zu vermeiden, besteht darin die Kamera zu kalibrieren und die 5 Verzeichnungsparameter zu bestimmen. Im Anschluss werden die Bilddaten mithilfe der Verzeichnungsparameter transformiert und so ein kalibriertes Bild erzeugt. Im Rahmen dieser Arbeit wird jedoch auf eine Kamerakalibrierung verzichtet, da die bildbasierte Winkelbestimmung zufriedenstellende Ergebnisse liefert. Eine weitere Ursache für Abweichungen zwischen $ \varphi_1 $ und $ \varphi_{1,\mathrm{B}} $ liegt in der eventuell nicht exakt horizontal  ausgerichteten Kamera vor dem Doppelpendel, wodurch ein perspektivischer Fehler entstehen kann. 
 
 Zusammenfassend lässt sich sagen, dass die bildbasierte Winkelbestimmung für den Zweck der Beobachtervalidierung hinreichend genau ist. Es folgt die Validierung der Zustandsschätzung des EKF am inversen Doppelpendel. 
 
